--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "FleissKappa"]
-	path = FleissKappa
+	path = analyze_results/FleissKappa
 	url = https://github.com/Shamya/FleissKappa.git
